subscribe form checkbox check

--- a/app/views/web/ost/alpha3winners/_subscribe.erb
+++ b/app/views/web/ost/alpha3winners/_subscribe.erb
@@ -59,7 +59,7 @@
                   <polyline points="4 11 8 15 16 6"></polyline>
                 </svg>
               </div>
-              <span class="font-weight-normal">I agree to OST contacting me about OST KIT Alpha III, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" class="terms-link" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
+              <span class="font-weight-normal info-text">I agree to OST contacting me about OST KIT Alpha III, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" class="terms-link" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
             </label>
             <div class="invalid-feedback" data-forname="ost_product_communicate"></div>
           </div>
@@ -73,7 +73,7 @@
                   <polyline points="4 11 8 15 16 6"></polyline>
                 </svg>
               </div>
-              <span class="font-weight-normal">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" class="terms-link" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
+              <span class="font-weight-normal info-text">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" class="terms-link" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
             </label>
           </div>
 
