--- a/app/views/web/ost/alpha3winners/_subscribe.erb
+++ b/app/views/web/ost/alpha3winners/_subscribe.erb
@@ -107,7 +107,7 @@
             </switch>
           </svg>
           <h5>Thank you for signing up.</h5>
-          <h5>We will inform you know as soon as OST KIT⍺ Phase III is open for applications!</h5>
+          <h5>We will inform you know as soon as OST KIT⍺ Phase IV is open for applications!</h5>
           <button class="btn btn-primary mt-4" title="Close" data-dismiss="modal">Close</button>
         </div>
       </div>
