--- a/app/views/web/ost/alpha3winners/_twitter_feed.erb
+++ b/app/views/web/ost/alpha3winners/_twitter_feed.erb
@@ -7,61 +7,64 @@
              twitter_users = [
 
                              {
-                                 desc: "In just 6 weeks we built a Q&A platform from scratch! In this short time we integrated our own token economy powered by @OSTdotcom for rewarding good answers.",
-                                 handle:"@kwandaDotMe",
-                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/kwandadotme.jpg",
-                                 link:"https://twitter.com/kwandaDotMe/status/1000738502345216001"
+                                 desc: "Sleepy days and sleepless nights are here again! Time to get coding and integrate #OST's new ledger and balance API guys and gals!",
+                                 handle:"@realJayNay",
+                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/real-jay-nay.jpg",
+                                 link:"https://twitter.com/realJayNay/status/1017379144592773120"
                              },
                              {
-                                 desc: "Being a part of the growing developer community building on OST has been amazing. #osta2
-                                                   Using OST KIT, here’s a look at what dev. teams from around the world were able to create in less than six weeks [...]",
+                                 desc: "Say Hello to FUTURED.  We are currently in development of a stunning new long-form publication covering future tech and lifestyle.",
+                                 handle:"@FUTUREDmedia",
+                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/futured-media.jpg",
+                                 link:"https://twitter.com/FUTUREDmedia/status/1019003631859830784"
+                             },
+                             {
+                                 desc: "Excited to participate in “Simple Token OST PoC III Challenge: Introducing blockchain applications to Educational institutions.",
+                                 handle:"@naidughusai",
+                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/naidughu-sai.jpg",
+                                 link:"https://twitter.com/naidughusai/status/1018427775651336192"
+                             },
+                             {
+                                 desc: "Our 1st weekly update for #OSTa3 is out! For us at kidtoken, Alpha 3 is all about creating, interacting & supporting wallet features for our users.",
                                  handle:"@Ostkidtoken",
-                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/ostkidtoken.jpg",
-                                 link:"https://twitter.com/Ostkidtoken/status/1001099129358028801"
-                             },
-                             {
-                                 desc: "I'm done! https://medium.com/really-simple-store …Thank you, @OSTdotcom and @betashop ! I had such a blast working on this over the last 6 weeks. #OST #OSTa2 $OST",
-                                 handle:"@truedrewco",
-                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/truedrewco.jpg",
-                                 link:"https://twitter.com/truedrewco/status/999336118062546944"
-
-                             },
-                             {
-                                 desc: "Excited to share our final submission for OST KIT Alpha Phase II Dev Challenge! We hope you like the hard work we put into making a production ready app (DQuiz) over the last month!",
-                                 handle:"@DappLabs",
-                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/dapplabs.jpg",
-                                 link:"https://twitter.com/DappLabs/status/999508563146850304"
-
+                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/ost-kid-token.jpg",
+                                 link:"https://twitter.com/Ostkidtoken/status/1018901381451677696"
                              },
 
                              {
-                               desc: "Final submission of our #OSTa2 project $OST Loyalty for @OSTdotcom is done. It is a free loyalty&reward addon for the #ecommerce software @cscart, using any #OST branded token. We hope this a a good step towards more #cryptocurrency adoption. #blockchain",
-                               handle:"@TechUpBusiness",
-                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/techupbusiness.jpg",
-                               link:"https://twitter.com/TechUpBusiness/status/999929042747961344"
+                               desc: "Participating in OST KIT Alpha Phase III with Teletip - Your telegram BOT for tipping and upvoting valuable content! #osta3",
+                               handle:"@PrasannaDhaval1",
+                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/prasanna-dhaval.jpg",
+                               link:"https://twitter.com/PrasannaDhaval1/status/1019286401811038208"
 
                              },
                              {
-                                 desc: "I’m part of group of 142 others who are building a proof of concept for @OSTdotcom . I’m adding a token economy into Really Simple Store to facilitate “community selling.” Here’s my halfway video. Final video on May 25. #OSTa2",
-                                 handle:"@truedrewco",
-                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/truedrewco.jpg",
-                                 link:"https://twitter.com/truedrewco/status/992212723852247040"
-                             },
-
-                             {
-                               desc: "Our team is currently hard at work building a universal tokenized allowance for kids. With the ability for parents & teachers to offer rewards and micro-incentives, we're focused on creating the most engaging & fun to use app for millions of children. Powered by @ostdotcom #osta2",
-                             handle:"@Ostkidtoken",
-                                   profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/ostkidtoken.jpg",
-                             link:"https://twitter.com/Ostkidtoken/status/993891674194669568"
-
+                                 desc: "Introducing TransitToken - the token that puts riders in the driver's seat. Follow our updates for the OST Kit Alpha Phase III Challenge. #OSTa3",
+                                 handle:"@token_transit",
+                                 profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/transit-token.jpg",
+                                 link:"https://twitter.com/token_transit/status/1019730306968977408"
                              },
                              {
-                               desc: "Been working on my new design for The Community Mind. Pretty pleased, just need to wire it up to the backend and my #OSTa2 alpha test should be good to go! [...]",
-                               handle:"@WillAbramson",
-                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/willabramson.jpg",
-                               link:"https://twitter.com/WillAbramson/status/996747734345572353"
+                               desc: "Introducing - Blockchain Loyalty Points for your Web store front! An #OSTa3 Proof of Concept",
+                               handle:"@Shinto2000",
+                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/shinto-2000.jpg",
+                               link:"https://twitter.com/Shinto2000/status/1019810708454699008"
 
-                               },
+                             },
+                             {
+                               desc: "Introducing Coinstarter, a tokenized crowd funding platform for the next generation of great ideas. #OSTa3",
+                               handle:"@CoinstarterCo",
+                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/coin-starter-co.jpg",
+                               link:"https://twitter.com/CoinstarterCo/status/1020125692305059840"
+
+                             },
+                             {
+                               desc: "First update on our blockchain-powered car pooling app Proof of Concept for OST KIT Alpha #OSTa3",
+                               handle:"@rideguruapp",
+                               profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/winners-twitter/ride-guru-app.jpg",
+                               link:"https://twitter.com/rideguruapp/status/1021328966433542145"
+
+                             },
                              ]
 
 
