--- a/app/assets/stylesheets/web/ost/alpha3winners/Side_by_side.scss
+++ b/app/assets/stylesheets/web/ost/alpha3winners/Side_by_side.scss
@@ -242,25 +242,19 @@
 
 .back-angled-edge{
   &:after {
-    background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='#34445b' preserveAspectRatio='none'%3E%3Cpolygon points='0,0 100,100 100,0' /%3E%3C/svg%3E");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAxMDAgMTAwJyBmaWxsPScjMzQ0NDViJyBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSdub25lJz48cG9seWdvbiBwb2ludHM9JzAsMCAxMDAsMTAwIDEwMCwwJyAvPjwvc3ZnPg==");
     content: '';
-    height: 10vw;
+    height: 5vw;
     width: 100%;
     position: absolute;
-    bottom: -10vw;
+    bottom: -5vw;
     z-index: 1;
   }
 }
 
 .forward-angled-edge{
   &:after {
-    background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='#34445b' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 0,0' /%3E%3C/svg%3E");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAxMDAgMTAwJyBmaWxsPScjMzQ0NDViJyBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSdub25lJz48cG9seWdvbiBwb2ludHM9JzAsMTAwIDEwMCwwIDAsMCcgLz48L3N2Zz4=");
     content: '';
     height: 2vw;
     width: 100%;
