--- a/app/views/web/ost/alpha3winners/_stats.erb
+++ b/app/views/web/ost/alpha3winners/_stats.erb
@@ -4,7 +4,7 @@
 
       <div class="row">
         <div class="col-10 col-md-10 col-lg-12 mx-auto">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
               <svg class="align-middle descriptive-icons" >
                 <switch>
@@ -48,13 +48,14 @@
                 <h4 class="stats-value" id="d4">0</h4>
                 <small class="stats-desc">
                   VOTES casted by
+                  <br/>
                   OST Community
                 </small>
               </div>
             </div>
           </div>
 
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
               <svg class="align-middle ost-icon">
                 <switch>
