--- a/app/views/web/ost/alpha3winners/_side_by_side.erb
+++ b/app/views/web/ost/alpha3winners/_side_by_side.erb
@@ -3,8 +3,8 @@
   <div class="row my-5 pb-3">
     <div class="container text-center">
       <h3>The Challenge</h3>
-      <p class="my-4">More than 90 teams from 50+ countries successfully completed the OST KIT Alpha III challenge. All Proofs of Concept highlight the OST Ledger & Balance APIs, allowing developers to create wallet- lite features in their applications where end-users can interact with their token balances and transaction histories. Thank you to all participants and winners!</p>
-      <a href="https://medium.com/ostdotcom/kicking-off-ost-kit-phase-ii-developer-proofs-of-concept-challenge-5f2987f92a97" class="the-challenge-link" target="_blank">For more details on the full Alpha III rules and eligibility, please read our announcement blog post</a>.
+      <p class="my-4">"Nearly 100 projects from 50+ countries successfully completed the OST KIT Alpha III challenge. All Proofs of Concept highlight the OST Ledger & Balance APIs, allowing developers to create wallet- lite features in their applications where end-users can interact with their token balances and transaction histories. Thank you to all participants and winners!"</p>
+      <a href="https://medium.com/ostdotcom/kicking-off-ost-kit-phase-ii-developer-proofs-of-concept-challenge-5f2987f92a97" class="the-challenge-link" target="_blank">For more details on the full Alpha III rules and eligibility, please read our announcement blog post.</a>.
     </div>
   </div>
 
