--- a/app/views/web/ost/alpha3winners/_subscribe.erb
+++ b/app/views/web/ost/alpha3winners/_subscribe.erb
@@ -3,7 +3,7 @@
     <div class="container mx-auto">
       <div class="row">
         <div class="col-12 mx-auto text-center">
-          <h3 class="mb-5">Sign Up for OST Alpha IV</h3>
+          <h3 class="mb-5">Pre-register for Alpha IV!</h3>
         </div>
       </div>
       <div class="row">
