--- a/app/views/web/ost/alpha3winners/_stats.erb
+++ b/app/views/web/ost/alpha3winners/_stats.erb
@@ -47,9 +47,8 @@
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d4">0</h4>
                 <small class="stats-desc">
-                  VOTES casted by
-                  <br/>
-                  OST Community
+                  <span class="d-block">VOTES casted by</span>
+                  <span class="d-block">OST Community</span>
                 </small>
               </div>
             </div>
