--- a/app/views/web/ost/alpha3winners/_stats.erb
+++ b/app/views/web/ost/alpha3winners/_stats.erb
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-10 col-md-10 col-lg-12 mx-auto">
           <div class="row align-items-center">
-            <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle descriptive-icons" >
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-register-icon"></use>
@@ -16,7 +16,7 @@
                 <small class="stats-desc">REGISTRATIONS</small>
               </div>
             </div>
-            <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle descriptive-icons" >
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-countries-icon"></use>
@@ -27,7 +27,7 @@
                 <small class="stats-desc">COUNTIRES</small>
               </div>
             </div>
-            <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle descriptive-icons" >
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-successful-pocs-icon"></use>
@@ -38,7 +38,7 @@
                 <small class="stats-desc">SUCCESSFUL POCs</small>
               </div>
             </div>
-            <div class="col-11 col-md-6 col-lg-3 my-3 stats-icons-wrap mx-auto">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle descriptive-icons" >
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-vote-icon"></use>
@@ -55,7 +55,7 @@
           </div>
 
           <div class="row align-items-center">
-            <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle ost-icon">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
@@ -66,7 +66,7 @@
                 <small class="stats-desc">FOR SUCCESSFUL POCs</small>
               </div>
             </div>
-            <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle ost-icon">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
@@ -77,7 +77,7 @@
                 <small class="stats-desc">FOR BEST OF ALPHA III POCs</small>
               </div>
             </div>
-            <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle ost-icon">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-ost-icon"></use>
@@ -88,7 +88,7 @@
                 <small class="stats-desc">TOTAL OST AWARDED</small>
               </div>
             </div>
-            <div class="col-11 col-md-6 col-lg-3 mx-auto my-3 text-md-left">
+            <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
               <svg class="align-middle ost-icon">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#stats-tweets-icon"></use>
