--- a/app/views/web/ost/alpha3winners/_stats.erb
+++ b/app/views/web/ost/alpha3winners/_stats.erb
@@ -24,7 +24,7 @@
               </svg>
               <div class="d-inline-block align-middle">
                 <h4 class="stats-value" id="d2">0</h4>
-                <small class="stats-desc">COUNTIRES</small>
+                <small class="stats-desc">COUNTRIES</small>
               </div>
             </div>
             <div class="col-11 col-md-6 col-lg-3 my-3 mx-auto">
