news section carousel

--- a/app/views/web/ost/alpha3winners/_news_carousel.erb
+++ b/app/views/web/ost/alpha3winners/_news_carousel.erb
@@ -91,57 +91,37 @@
                 date: "11 June 2018",
               },
               {
-                title: "#OSTa2 — Halfway Video Updates",
-                article_link: "https://medium.com/ostdotcom/osta2-halfway-video-updates-4716fa05be38",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/osta2-halfway-video-updates.jpg",
-                date: "7 May 2018",
+                title: "Final Week of OST KIT Alpha III: POC Submission Form is Now Open",
+                article_link: "https://medium.com/ostdotcom/final-week-of-ost-kit-alpha-iii-poc-submission-form-is-now-open-26f90653427f",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/news/final-week-of-ost-kit-alpha-III.png",
+                date: "7 Aug 2018",
               },
               {
                 title: "Kicking off OST KIT⍺ Phase II: Developer Proofs of Concept Challenge",
-                article_link: "https://medium.com/ostdotcom/kicking-off-ost-kit-phase-ii-developer-proofs-of-concept-challenge-5f2987f92a97",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/Kicking-off-OST-KIT-PhaseII.jpg",
-                date: "16 Apr 2018",
+                article_link: "https://medium.com/ostdotcom/ost-kit-alpha-iii-over-120-halfway-updates-on-how-ost-technology-helps-kickstart-new-economies-5a2811e61edc",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/ost-alpha-III-halfway-update.jpg",
+                date: "1 Aug 2018",
               },
               {
-                title: "Introducing #OSTa2 Projects (Pt. 1)",
-                article_link: "https://medium.com/ostdotcom/introducing-osta2-projects-pt-1-744e60cb806d",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-1.jpg",
-                date: "24 Apr 2018",
+                title: "More than 200 Developer Teams Start Tokenizing their Apps with OST KIT Alpha III",
+                article_link: "https://medium.com/ostdotcom/more-than-200-developer-teams-start-tokenizing-their-apps-with-ost-kit-alpha-iii-6ee5c28a6192",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/kicking-off-ost-kit-alpha-phase-III.jpg",
+                date: "24 Jul 2018",
               },
 
               {
-                title: "14 More #OSTa2 Projects (Pt. 2)",
-                article_link: "https://medium.com/ostdotcom/14-more-osta2-projects-pt-2-d74348d47aa3",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-2.jpg",
-                date: "25 Apr 2018",
+                title: "170+ Developer Teams Now Live With OST KIT Alpha III Embedded Wallet-Lite Challenge, 24 Hours Left to Register!",
+                article_link: "https://medium.com/ostdotcom/170-development-teams-now-live-with-ost-kit-alpha-iii-embedded-wallet-lite-challenge-24-hours-afd50a2e2e3d",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/news/ost-kit-alpha-III-embedded-wallet-lite-challenge.jpeg",
+                date: "19 Jul 2018",
               },
 
               {
-                title: "The next 14 #OSTa2 Projects (Pt. 3)",
-                article_link: "https://medium.com/ostdotcom/the-next-14-osta2-projects-pt-3-81d04adfa8f9",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-3.jpg",
-                date: "27 Apr 2018",
-              },
-
-              {
-                title: "14 more #OSTa2 Projects (Pt. 4)",
-                article_link: "https://medium.com/ostdotcom/14-more-osta2-projects-pt-4-b3592975a2f8",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-4.jpg",
-                date: "27 Apr 2018",
-              },
-
-              {
-                title: "Another 14 #OSTa2 Projects (Pt. 5)",
-                article_link: "https://medium.com/ostdotcom/another-14-osta2-projects-pt-5-159c5db23c48",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-5.jpg",
-                date: "30 Apr 2018",
-              },
-              {
-                title: "The next 14 #OSTa2 Projects (Pt. 6)",
-                article_link: "https://medium.com/ostdotcom/the-next-14-osta2-projects-pt-6-b6546a830111",
-                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-6.jpg",
-                date: "1 May 2018",
-              },
+                title: "Announcing OST KIT Alpha Phase III: Embedded Wallet-Lite Challenge",
+                article_link: "https://medium.com/ostdotcom/announcing-ost-kit-alpha-phase-iii-embedded-wallet-lite-challenge-4a67ea214971",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/kicking-off-ost-kit-alpha-phase-III.jpg",
+                date: "10 Jul 2018",
+              }
 
             ]
           )
