--- a/app/views/web/ost/alpha3winners/_news_carousel.erb
+++ b/app/views/web/ost/alpha3winners/_news_carousel.erb
@@ -85,19 +85,19 @@
           ost.winner.newsCarousel.init(
             [
               {
-                title: "Announcing the winners of OST KIT⍺ Phase II Developer Challenge",
+                title: "Presenting The “Best of Alpha III” Projects",
                 article_link: "https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656",
                 image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-proof-of-concept.png",
                 date: "11 June 2018",
               },
               {
-                title: "Final Week of OST KIT Alpha III: POC Submission Form is Now Open",
+                title: "Final Week of OST KIT Alpha III",
                 article_link: "https://medium.com/ostdotcom/final-week-of-ost-kit-alpha-iii-poc-submission-form-is-now-open-26f90653427f",
                 image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/news/final-week-of-ost-kit-alpha-III.png",
                 date: "7 Aug 2018",
               },
               {
-                title: "Kicking off OST KIT⍺ Phase II: Developer Proofs of Concept Challenge",
+                title: "OST KIT Alpha III: Over 120 Halfway Updates On How OST Technology Helps Kickstart New Economies",
                 article_link: "https://medium.com/ostdotcom/ost-kit-alpha-iii-over-120-halfway-updates-on-how-ost-technology-helps-kickstart-new-economies-5a2811e61edc",
                 image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/ost-alpha-III-halfway-update.jpg",
                 date: "1 Aug 2018",
