--- a/app/views/web/ost/alpha3winners/_news_carousel.erb
+++ b/app/views/web/ost/alpha3winners/_news_carousel.erb
@@ -97,7 +97,7 @@
                 date: "7 Aug 2018",
               },
               {
-                title: "OST KIT Alpha III: Over 120 Halfway Updates On How OST Technology Helps Kickstart New Economies",
+                title: "Over 120 Halfway Updates",
                 article_link: "https://medium.com/ostdotcom/ost-kit-alpha-iii-over-120-halfway-updates-on-how-ost-technology-helps-kickstart-new-economies-5a2811e61edc",
                 image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/ost-alpha-III-halfway-update.jpg",
                 date: "1 Aug 2018",
@@ -110,7 +110,7 @@
               },
 
               {
-                title: "170+ Developer Teams Now Live With OST KIT Alpha III Embedded Wallet-Lite Challenge, 24 Hours Left to Register!",
+                title: "170+ Developer Teams Now Live - 24 Hours Left to Register!",
                 article_link: "https://medium.com/ostdotcom/170-development-teams-now-live-with-ost-kit-alpha-iii-embedded-wallet-lite-challenge-24-hours-afd50a2e2e3d",
                 image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/news/ost-kit-alpha-III-embedded-wallet-lite-challenge.jpeg",
                 date: "19 Jul 2018",
