team page changes by Ignas

--- a/app/views/web/ost/team.html.erb
+++ b/app/views/web/ost/team.html.erb
@@ -9,7 +9,7 @@
                                                                  } %>
   <%= render :partial => "/web/ost/team/team" %>
   <%= render :partial => "/web/ost/team/work_with_us" %>
-  <%= render :partial => "/web/ost/team/board_directors" %>
+  <%#= render :partial => "/web/ost/team/board_directors" %>
   <%= render :partial => "/web/ost/team/advisors" %>
   <%= render :partial => "/web/ost/team/extended_team" %>
   <%= render :partial => "/web/ost/team/early_backers" %>
