--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -47,6 +47,14 @@
                                 description: "Renee Wong is seasoned financial strategist with 10+ years experience as CFO and General Manager in high growth businesses. Her previous experience includes executive and financial leadership roles at Dashlane, Fab.com, and Pop Sugar."
                             },
                             {
+                              name: "Chris Dark",
+                              title: "Chief Commercial Office",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Chris-Dark.png",
+                              linkedIn: 'https://www.linkedin.com/in/chrisdark/',
+                              twitter: "https://twitter.com/darky999",
+                              description: 'Chris is President International at C2FO. Based in the C2FO Hong Kong office, Chris is responsible for C2FO business in EMEA, Asia-Pacific and LATAM. Prior to C2FO, Chris held key leadership positions at Atomico, AOL (advertising.com) and Bain & Co. Chris is a former entrepreneur and the Founder of GameReplays.org, an early eSports community founded in 2002.'
+                            },
+                            {
                               name: "Francesco Pacella",
                               title: "Vice President of Product",
                               image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francesco-Pacella.png",
