--- a/app/views/web/ost/alpha3winners/_side_by_side.erb
+++ b/app/views/web/ost/alpha3winners/_side_by_side.erb
@@ -11,42 +11,24 @@
 <%
   autoplay_version = "?rel=0&autoplay=1";
   side_by_side =  [{
-                           :title => '"Ship It!": Kwanda',
-                           :description => "Kwanda is a Q&A platform with a built-in token economy. Users can set a specific reward value to a question allowing for receiving and rewarding more high quality answers.",
+                           :title => 'kidtoken',
+                           :description => "kidtoken is a tokenized allowance for kids. kidtoken is designed to incentivize positive behaviors and to create a digital way to learn the new generation of kids how to save and spend.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
-                           :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI" + autoplay_version,
-                           :project_link => "http://kwanda.me",
-                           :project_link_name => "KWANDA",
-                           :participants => [
-                           {
-                               :title => "Marc Heiduk",
-                               :type  => "Web Developer"
-                           },
-                           {
-                               :title => "Anton Porsche",
-                               :type  => "Web Developer"
-                           }
-                          ]
-                        },
-                         {
-                           :title => "Best Motion Picture: kidtoken",
-                           :description => "kidtoken is the first tokenized cryptocurrency for kids that also offers parents & teachers the ability to incentivize positive behaviors such as good grades, kindness and eating healthy. The platform is a scalable concept aimed at a massive audience, one that’s growing up familiar with digital economies.",
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
-                           :youtube_link => "https://www.youtube.com/embed/fDTxlPmCSyc" + autoplay_version,
-                           :project_link => "https://www.kidtoken.org",
-                           :project_link_name => "KIDTOKEN",
+                           :youtube_link => "https://www.youtube.com/embed/wenTfSmHR6Y" + autoplay_version,
+                           :project_link => "https://medium.com/@ostkidtoken/kidtoken-ost-alpha-iii-final-video-and-blog-a40af79221fc",
+                           :project_link_name => "kidtoken",
                            :participants => [
                            {
                                :title => "Scott Connors",
                                :type  => "CEO"
                            },
                            {
-                             :title => "Casie Connors",
-                             :type  => "CFO"
+                               :title => "Casie Connors",
+                               :type  => "CFO"
                            },
                            {
-                             :title => "Chance Chapman",
-                             :type  => "CTO"
+                               :title => "Chance Chapman",
+                               :type  => "CTO"
                            },
                            {
                              :title => "Michael Murray",
@@ -60,50 +42,106 @@
                              :title => "David Bobr",
                              :type  => "Business Development Manager"
                            }
+
+                          ]
+                        },
+                         {
+                           :title => "Really Simple Store",
+                           :description => 'Really Simple Store allows for "creator stores" to generate more revenue by listing and selling other stores’ products. Their Branded Token has the potential to connect crafts stores all over the world.',
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/wjpyp210Zy0" + autoplay_version,
+                           :project_link => "https://medium.com/really-simple-store/ost-alpha-iii-final-video-and-post-f9248081d01d",
+                           :project_link_name => "Really Simple Store",
+                           :participants => [
+                           {
+                               :title => "Drew Thomas"
+                           }
                            ]
                          },
                          {
-                           :title => "Best UX: HARD Gaming",
-                           :description => "The goal of HARD is to replace the use of in-game fiat currency. The biggest advantage of a blockchain based economy is that the users are the real owners of their tokens and that it’s transparent how each user is interacting with the economy. Users can use HARD across multiple games and they can make sure that tokens will not disappear, so they are more motivated to convert real money to tokens.",
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
-                           :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s" + autoplay_version,
-                           :project_link_name => "HARD GAMING",
+                           :title => "FUTURED",
+                           :description => 'Futured is the concept for an "intellectual magazine free of spam or low quality content". Their token will reward readers and authors for contributing and sharing worthy content.',
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/NdH7ZO4PnF0" + autoplay_version,
+                           :project_link => "https://medium.com/futured/development-update-v-03-ost-final-69a9b2edfc6",
+                           :project_link_name => "FUTURED",
                            :participants => [
                              {
-                               :title => "David Rios",
-                               :type  => "Senior Game Developer"
+                               :title => "Tyler Lastovich"
                              }
                            ]
                          },
                          {
-                           :title => "Most Innovative: Coner",
-                           :description => "The motivation behind Coner is the problem of limited efficiency of publications search in digital libraries. Coner is an interactive document viewer that visualises automatically extracted keywords in research papers and allows users to rate and add new keywords.",
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
-                           :youtube_link => "https://www.youtube.com/embed/G-bMkp8tm-A" + autoplay_version,
-                           :project_link => "https://coner-viewer.herokuapp.com/viewer",
-                           :project_link_name => "CONER",
+                           :title => "Firmament",
+                           :description => 'Firmament is a chat bot that allows businesses and its employees to incentivize their co-workers with little token rewards. Firmament aims to improve the overall productivity and joy at work.',
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/m5-n1mspU8k" + autoplay_version,
+                           :project_link => "https://medium.com/@stefanlh/firmament-ost-kit-alpha-phase-iii-finished-e3017ca1721c",
+                           :project_link_name => "Firmament",
                            :participants => [
                              {
-                               :title => "Daniel Vliegenthart",
-                               :type  => "Full-Stack Web Developer"
+                               :title => "Stefan Lange-Hegermann"
                              }
                            ]
                          },
                          {
-                           :title => 'Best "Do Good": ReadIt',
-                           :description => "ReadIt's mission is to reduce illiteracy by providing a scalable reading program that enhances the tracking & reward program by leveraging WebUI & Blockchain integration.",
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
-                           :youtube_link => "https://www.youtube.com/embed/iKD4jAyXq4A" + autoplay_version,
-                           :project_link => "https://jshin2000.wixsite.com/readitprogram",
-                           :project_link_name => "READIT",
+                           :title => "Surwei",
+                           :description => 'Surwei lets companies and researchers collect more responses to their surveys by rewarding respondents with Branded Tokens. They can earn tokens themselves by responding to other surveys.',
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/_xpIWQgh33k" + autoplay_version,
+                           :project_link => "https://medium.com/surwei/ost-3-final-post-surwei-3980715fed16",
+                           :project_link_name => "Surwei",
                            :participants => [
                              {
-                               :title => "John Shin",
-                               :type  => "Sales Engineer"
+                               :title => "Tiago Alves"
+                             }
+                           ]
+                         },
+                         {
+                           :title => "Employees Loyalty Program",
+                           :description => 'Employees Loyalty Program incentivizes employees with Branded Tokens for performing certain actions. These Tokens can then be spent within a network of affiliated companies.',
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/IViJzxF5Fvo" + autoplay_version,
+                           :project_link => "https://medium.com/@trapdoor1975/ost-alpha-iii-developers-challenge-final-submission-7581f65818b4",
+                           :project_link_name => "Employees Loyalty Program",
+                           :participants => [
+                             {
+                               :title => "Aleksei"
+                             }
+                           ]
+                         },
+                         {
+                           :title => "KARPARC",
+                           :description => 'Karparc wants to take the frustration out of finding a good parking spot by allowing drivers to book and pay for parking spots immediately, without reserving (thus blocking) spaces in advance.',
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/GCzpxvUm320" + autoplay_version,
+                           :project_link => "https://medium.com/@waliazizganatra/karparc-ost-kit-alpha-phase-iii-final-16c9398c4765",
+                           :project_link_name => "KARPARC",
+                           :participants => [
+                             {
+                               :title => "Moiz Iqbal",
+                               :type  => "Project Manager"
                              },
                              {
-                               :title => "Adam Wilhelmi",
-                               :type  => "Software Engineer"
+                               :title => "Wali Ganatra",
+                               :type  => "Tester"
+                             },
+                             {
+                               :title => "Hamza Younus",
+                               :type  => "Developer"
+                             },
+                           ]
+                         },
+                         {
+                           :title => "JoyPass",
+                           :description => 'JoyPass aims to rid the world of paper points and vouchers, by allowing consumers to receive JOY points insteads, which can be redeemed at participating stores, restaurants and communities.',
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_link => "https://www.youtube.com/embed/Uub04jXSzfs" + autoplay_version,
+                           :project_link => "https://medium.com/joypass/joypass-osta3-challenge-completed-9f5dfe89f296",
+                           :project_link_name => "KARPARC",
+                           :participants => [
+                             {
+                               :title => "Daniel Pham",
                              }
                            ]
                          }
@@ -122,8 +160,8 @@
             </div>
             <div class="row">
               <div class="col-12 col-md-7 play-video">
-                <div class="video-image">
-                  <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
+                <div class="video-image" title="<%= data[:project_link_name]%>">
+                  <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="<%= data[:project_link_name]%>"/>
                   <div class="play">
                     <svg class="svg-play">
                       <switch>
@@ -138,7 +176,7 @@
               <div class="col-12 col-md-5">
                 <p class="mt-3 mt-md-0"><%= data[:description]%></p>
                 <% if data[:project_link].present? %>
-                  <a href="<%= data[:project_link]%>" class="link" target="_blank" title="READ MORE ABOUT <%= data[:project_link_name]%>">READ MORE ABOUT <%= data[:project_link_name]%></a>
+                  <a href="<%= data[:project_link]%>" class="link text-uppercase" target="_blank" title="READ MORE ABOUT <%= data[:project_link_name]%>">READ MORE ABOUT <%= data[:project_link_name]%></a>
                 <%end%>
                 <% if data[:participants].present? %>
                   <div class="participants-container blue mt-4 <%= data[:participants].length > 2 ? "slick-slider-min" : "" %>">
@@ -165,7 +203,7 @@
             <div class="row">
               <div class="col-12 col-md-7 play-video order-sm-12">
                 <div class="video-image">
-                  <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
+                  <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="<%= data[:project_link_name]%>" />
                   <div class="play">
                     <svg class="svg-play">
                       <switch>
@@ -180,7 +218,7 @@
               <div class="col-12 col-md-5 order-sm-1">
                 <p class="mt-3 mt-md-0"><%= data[:description]%></p>
                 <% if data[:project_link].present? %>
-                  <a href="<%= data[:project_link]%>" class="link" target="_blank" title="READ MORE ABOUT <%= data[:project_link_name]%>">READ MORE ABOUT <%= data[:project_link_name]%></a>
+                  <a href="<%= data[:project_link]%>" class="link text-uppercase" target="_blank" title="READ MORE ABOUT <%= data[:project_link_name]%>">READ MORE ABOUT <%= data[:project_link_name]%></a>
                 <%end%>
                 <% if data[:participants].present? %>
                   <div class="participants-container sky-blue mt-4 <%= data[:participants].length > 2 ? "slick-slider-min" : "" %>">
