alpha 3 winners page UI

--- a/app/views/web/ost/alpha3winners/_side_by_side.erb
+++ b/app/views/web/ost/alpha3winners/_side_by_side.erb
@@ -14,7 +14,7 @@
   side_by_side =  [{
                            :title => 'kidtoken',
                            :description => "kidtoken is a tokenized allowance for kids. kidtoken is designed to incentivize positive behaviors and to create a digital way to learn the new generation of kids how to save and spend.",
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-kid-token@2x-2.png",
                            :youtube_link => "https://www.youtube.com/embed/wenTfSmHR6Y" + autoplay_version,
                            :project_link => "https://medium.com/@ostkidtoken/kidtoken-ost-alpha-iii-final-video-and-blog-a40af79221fc",
                            :project_link_name => "kidtoken",
@@ -49,7 +49,7 @@
                          {
                            :title => "Really Simple Store",
                            :description => 'Really Simple Store allows for "creator stores" to generate more revenue by listing and selling other stores’ products. Their Branded Token has the potential to connect crafts stores all over the world.',
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-really-simple-store@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/wjpyp210Zy0" + autoplay_version,
                            :project_link => "https://medium.com/really-simple-store/ost-alpha-iii-final-video-and-post-f9248081d01d",
                            :project_link_name => "Really Simple Store",
@@ -62,7 +62,7 @@
                          {
                            :title => "FUTURED",
                            :description => 'Futured is the concept for an "intellectual magazine free of spam or low quality content". Their token will reward readers and authors for contributing and sharing worthy content.',
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-futured@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/NdH7ZO4PnF0" + autoplay_version,
                            :project_link => "https://medium.com/futured/development-update-v-03-ost-final-69a9b2edfc6",
                            :project_link_name => "FUTURED",
@@ -75,7 +75,7 @@
                          {
                            :title => "Firmament",
                            :description => 'Firmament is a chat bot that allows businesses and its employees to incentivize their co-workers with little token rewards. Firmament aims to improve the overall productivity and joy at work.',
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-firmament@2x-2.png",
                            :youtube_link => "https://www.youtube.com/embed/m5-n1mspU8k" + autoplay_version,
                            :project_link => "https://medium.com/@stefanlh/firmament-ost-kit-alpha-phase-iii-finished-e3017ca1721c",
                            :project_link_name => "Firmament",
@@ -88,7 +88,7 @@
                          {
                            :title => "Surwei",
                            :description => 'Surwei lets companies and researchers collect more responses to their surveys by rewarding respondents with Branded Tokens. They can earn tokens themselves by responding to other surveys.',
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-surwei@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/_xpIWQgh33k" + autoplay_version,
                            :project_link => "https://medium.com/surwei/ost-3-final-post-surwei-3980715fed16",
                            :project_link_name => "Surwei",
@@ -101,7 +101,7 @@
                          {
                            :title => "Employees Loyalty Program",
                            :description => 'Employees Loyalty Program incentivizes employees with Branded Tokens for performing certain actions. These Tokens can then be spent within a network of affiliated companies.',
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-employee-discount@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/IViJzxF5Fvo" + autoplay_version,
                            :project_link => "https://medium.com/@trapdoor1975/ost-alpha-iii-developers-challenge-final-submission-7581f65818b4",
                            :project_link_name => "Employees Loyalty Program",
@@ -115,7 +115,7 @@
                          {
                            :title => "KARPARC",
                            :description => 'Karparc wants to take the frustration out of finding a good parking spot by allowing drivers to book and pay for parking spots immediately, without reserving (thus blocking) spaces in advance.',
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-karparc@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/GCzpxvUm320" + autoplay_version,
                            :project_link => "https://medium.com/@waliazizganatra/karparc-ost-kit-alpha-phase-iii-final-16c9398c4765",
                            :project_link_name => "KARPARC",
@@ -138,7 +138,7 @@
                          {
                            :title => "JoyPass",
                            :description => 'JoyPass aims to rid the world of paper points and vouchers, by allowing consumers to receive JOY points insteads, which can be redeemed at participating stores, restaurants and communities.',
-                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                           :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-joy-pass@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/Uub04jXSzfs" + autoplay_version,
                            :project_link => "https://medium.com/joypass/joypass-osta3-challenge-completed-9f5dfe89f296",
                            :project_link_name => "KARPARC",
