--- a/app/views/web/ost/alpha3winners/_twitter_feed.erb
+++ b/app/views/web/ost/alpha3winners/_twitter_feed.erb
@@ -1,6 +1,6 @@
 <section class="container-fluid container-twitter py-5 position-relative">
   <div class="row">
-    <div class="container pt-5 mt-5">
+    <div class="container">
       <div class="row">
         <div class="col-12 px-5">
           <%
