--- a/app/assets/stylesheets/web/ost/alpha3winners/news-carousel.scss
+++ b/app/assets/stylesheets/web/ost/alpha3winners/news-carousel.scss
@@ -12,6 +12,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
+    background-color: rgba(125, 213, 228, 0.2);
   }
   @media(max-width: 736px){
     overflow: hidden;
