--- a/app/views/web/ost/alpha3winners/_news_carousel.erb
+++ b/app/views/web/ost/alpha3winners/_news_carousel.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-carousel bg-image news-container-carousel">
+<section class="container-fluid container-carousel bg-image news-container-carousel py-5">
   <div class="row">
     <div class="container">
       <h3 class="pl-2 my-4">
