--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -56,13 +56,23 @@
               </a>
             </li>
             <li>
-              <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex" title="Dev Challenges">
+              <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex" title="Dev Challenges II">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">Dev Challenges</span>
+                <span class="pl-2">Dev Challenges II</span>
+              </a>
+            </li>
+            <li>
+              <a href="<%= GlobalConstant::Base.root_url %>challenges2" class="nav-svg-link d-flex" title="Dev Challenges III">
+                <svg class="nav-svg">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-alpha3-dev-winners-icon"></use>
+                  </switch>
+                </svg>
+                <span class="pl-2">Dev Challenges III</span>
               </a>
             </li>
             <li>
