--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -207,4 +207,16 @@
       </g>
     </g>
   </symbol>
+  <symbol id="dropdown-alpha3-dev-winners-icon" viewBox="0 0 22 23">
+    <g id="Page-4" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <g id="Group-2-Copy" transform="translate(-22.000000, -152.000000)" stroke="#34445B" stroke-width="1.2">
+        <g id="Challenges_icon-Copy" transform="translate(23.000000, 153.000000)">
+          <g id="Group-42">
+            <polyline id="Path-5" stroke-linecap="round" stroke-linejoin="round" points="10.1886738 7.7197029 10.1886738 0 5 0 10.1886738 3.38154616"></polyline>
+            <path d="M6.57996673,8 L13.3042701,8 C13.3594985,8 13.4042701,8.04477153 13.4042701,8.1 L13.4042701,16.3501152 C13.4042701,16.4053437 13.4490416,16.4501152 13.5042701,16.4501152 L19.9,16.4501152 C19.9552285,16.4501152 20,16.4948868 20,16.5501152 L20,21 L0,21 L1.38777878e-17,14.1771077 C7.1142503e-18,14.1218793 0.044771525,14.0771077 0.1,14.0771077 L6.37996673,14.0771077 C6.4351952,14.0771077 6.47996673,14.0323362 6.47996673,13.9771077 L6.47996673,8.1 C6.47996673,8.04477153 6.52473825,8 6.57996673,8 Z" id="Path-6" fill-rule="nonzero"></path>
+          </g>
+        </g>
+      </g>
+    </g>
+  </symbol>
 </svg>
