--- a/app/views/web/ost/alpha3winners.html.erb
+++ b/app/views/web/ost/alpha3winners.html.erb
@@ -7,3 +7,4 @@
 <%= render :partial => "/web/ost/alpha3winners/news_carousel" %>
 <%= render :partial => "/web/ost/alpha3winners/subscribe" %>
 <%= render :partial => "/web/ost/alpha3winners/svgs" %>
+<%= render :partial => "/shared/web/modals/help_video" %>
