url metadata nav bar links language

--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -62,7 +62,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">Dev Challenges II</span>
+                <span class="pl-2">Alpha II Challenge</span>
               </a>
             </li>
             <li>
@@ -72,7 +72,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-alpha3-dev-winners-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">Dev Challenges III</span>
+                <span class="pl-2">Alpha III Challenge</span>
               </a>
             </li>
             <li>
