--- a/app/views/web/ost/alpha3winners/_side_by_side.erb
+++ b/app/views/web/ost/alpha3winners/_side_by_side.erb
@@ -137,7 +137,7 @@
                          },
                          {
                            :title => "JoyPass",
-                           :description => 'JoyPass aims to rid the world of paper points and vouchers, by allowing consumers to receive JOY points insteads, which can be redeemed at participating stores, restaurants and communities.',
+                           :description => 'JoyPass aims to rid the world of paper points and vouchers, by allowing consumers to receive JOY points instead, which can be redeemed at participating stores, restaurants and communities.',
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-joy-pass@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/Uub04jXSzfs" + autoplay_version,
                            :project_link => "https://medium.com/joypass/joypass-osta3-challenge-completed-9f5dfe89f296",
