--- a/app/views/web/ost/alpha3winners/_side_by_side.erb
+++ b/app/views/web/ost/alpha3winners/_side_by_side.erb
@@ -3,7 +3,7 @@
   <div class="row my-5 pb-3">
     <div class="container text-center">
       <h3>The Challenge</h3>
-      <p class="my-4">"Nearly 100 projects from 50+ countries successfully completed the OST KIT Alpha III challenge. All Proofs of Concept highlight the OST Ledger & Balance APIs, allowing developers to create wallet- lite features in their applications where end-users can interact with their token balances and transaction histories. Thank you to all participants and winners!"</p>
+      <p class="my-4">92 projects from 50+ countries successfully completed the OST KIT Alpha III challenge. All Proofs of Concept highlight the OST Ledger & Balance APIs, allowing developers to create wallet- lite features in their applications where end-users can interact with their token balances and transaction histories. Thank you to all participants and winners!</p>
       <a href="https://medium.com/ostdotcom/announcing-ost-kit-alpha-phase-iii-embedded-wallet-lite-challenge-4a67ea214971" class="the-challenge-link" target="_blank">For more details on the full Alpha III rules and eligibility, please read our announcement blog post.</a>.
     </div>
   </div>
@@ -141,7 +141,7 @@
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha-winners-joy-pass@2x.png",
                            :youtube_link => "https://www.youtube.com/embed/Uub04jXSzfs" + autoplay_version,
                            :project_link => "https://medium.com/joypass/joypass-osta3-challenge-completed-9f5dfe89f296",
-                           :project_link_name => "KARPARC",
+                           :project_link_name => "JoyPass",
                            :community_vote => community_vote_path,
                            :participants => [
                              {
