--- a/app/views/web/ost/alpha3winners/_jumbotron.erb
+++ b/app/views/web/ost/alpha3winners/_jumbotron.erb
@@ -5,7 +5,7 @@
       <div class="col-md-12 col-lg-6">
         <h3 class="font-weight-bold">OST Alpha III Proofs of Concept</h3>
         <p class="mt-3">
-          OST Alpha III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features. More than 90 teams from 50+ countries successfully completed the Alpha III challenge. A big thank you to all developers!
+          OST Alpha III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features. 92 teams from 50+ countries successfully completed the Alpha III challenge. A big thank you to all developers!
         </p>
         <a href="#winners" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">Watch the poc's</a>
         <a href="#subscribe" target="_blank" class="btn btn-secondary smooth-scroll my-2 ml-xl-3" title="Learn about OST Alpha III">Coming soon alpha IV</a>
