--- a/app/views/web/ost/alpha3winners/_side_by_side.erb
+++ b/app/views/web/ost/alpha3winners/_side_by_side.erb
@@ -4,7 +4,7 @@
     <div class="container text-center">
       <h3>The Challenge</h3>
       <p class="my-4">92 projects from 50+ countries successfully completed the OST KIT Alpha III challenge. All Proofs of Concept highlight the OST Ledger & Balance APIs, allowing developers to create wallet- lite features in their applications where end-users can interact with their token balances and transaction histories. Thank you to all participants and winners!</p>
-      <a href="https://medium.com/ostdotcom/announcing-ost-kit-alpha-phase-iii-embedded-wallet-lite-challenge-4a67ea214971" class="the-challenge-link" target="_blank">For more details on the full Alpha III rules and eligibility, please read our announcement blog post.</a>.
+      <a href="https://medium.com/ostdotcom/announcing-ost-kit-alpha-phase-iii-embedded-wallet-lite-challenge-4a67ea214971" class="the-challenge-link" target="_blank">For more details on the full Alpha III rules and eligibility, please read our announcement blog post</a>.
     </div>
   </div>
 
